--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background: linear-gradient(120deg, #f6d365, #fda085);
+  background: linear-gradient(120deg, #191970, #20b2aa);
   color: #333;
   text-align: center;
 }
