--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: dimgray;
+  background: linear-gradient(120deg, #191970, #20b2aa);
+  color: #333;
 }
