--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,37 @@ body {
   color: #fff;
   font-weight: bold;
 }
+
+.footer {
+  backdrop-filter: blur(5px);
+  width: 100%;
+  padding: 1.5rem 0;
+  margin-top: auto; /* Mantém o footer no final da página */
+}
+
+.footer-text {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 0.9rem;
+  margin: 0 15px;
+  text-align: center;
+}
+
+.footer-link {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  transition: all 0.3s ease;
+  gap: 0.5rem;
+}
+
+.footer-link:hover {
+  color: #20b2aa;
+  transform: translateY(-2px);
+}
+
+/* Ícones (caso queira adicionar) */
+.footer-icon {
+  margin-left: 5px;
+  width: 18px;
+  height: 18px;
+  fill: currentColor;
+}
